--- a/GM-Assignment/Base.lproj/Main.storyboard
+++ b/GM-Assignment/Base.lproj/Main.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Home View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GM_Assignment" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="HomeViewController" customModule="GM_Assignment" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -20,19 +20,28 @@
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TaX-Xq-2Is">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <connections>
-                                    <segue destination="dS1-fI-Ofm" kind="embed" id="gz4-Ig-7fm"/>
+                                    <segue destination="dS1-fI-Ofm" kind="embed" identifier="HistoryTableViewController" id="gz4-Ig-7fm"/>
                                 </connections>
                             </containerView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="Ftr-6I-Spz">
+                                <rect key="frame" x="169" y="315" width="37" height="37"/>
+                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="TaX-Xq-2Is" secondAttribute="bottom" id="2Ca-E3-SrF"/>
+                            <constraint firstItem="Ftr-6I-Spz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ALI-w5-Gdr"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="TaX-Xq-2Is" secondAttribute="trailing" id="HyS-FE-iZ8"/>
+                            <constraint firstItem="Ftr-6I-Spz" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="tOK-v2-RVG"/>
                             <constraint firstItem="TaX-Xq-2Is" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="uxs-V4-de8"/>
                             <constraint firstItem="TaX-Xq-2Is" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="xEB-yg-JGZ"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="activityIndicator" destination="Ftr-6I-Spz" id="Oro-N4-RQY"/>
+                        <outlet property="historyTableViewContainer" destination="TaX-Xq-2Is" id="Tff-pB-MYo"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
