--- a/GM-Assignment/Base.lproj/Main.storyboard
+++ b/GM-Assignment/Base.lproj/Main.storyboard
@@ -112,6 +112,9 @@
                             <outlet property="delegate" destination="dS1-fI-Ofm" id="PNU-6e-H0Q"/>
                         </connections>
                     </tableView>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="LvE-qL-OFP">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9mc-nJ-ALb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
