--- a/GM-Assignment/Base.lproj/Main.storyboard
+++ b/GM-Assignment/Base.lproj/Main.storyboard
@@ -5,7 +5,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -28,7 +27,7 @@
                             </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" name="TableBackground"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="TaX-Xq-2Is" secondAttribute="bottom" id="2Ca-E3-SrF"/>
                             <constraint firstItem="Ftr-6I-Spz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ALI-w5-Gdr"/>
@@ -52,57 +51,73 @@
         <scene sceneID="ZbT-PI-qWr">
             <objects>
                 <tableViewController id="dS1-fI-Ofm" customClass="HistoryTableViewController" customModule="GM_Assignment" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="ufK-bw-1Ha">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="ufK-bw-1Ha">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" name="TableBackground"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="HistoryTableViewCell" id="V2e-Ic-9xq" customClass="HistoryTableViewCell" customModule="GM_Assignment" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="78"/>
+                                <rect key="frame" x="0.0" y="28" width="375" height="102.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="V2e-Ic-9xq" id="soR-xw-9kT">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="78"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="102.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="SjM-3R-8JA">
-                                            <rect key="frame" x="8" y="8" width="359" height="62"/>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B3O-gA-iRa" userLabel="Card View">
+                                            <rect key="frame" x="8" y="8" width="359" height="86.5"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="253" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JZs-Nb-Mqo" userLabel="Author Label">
-                                                    <rect key="frame" x="0.0" y="0.0" width="359" height="20.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" name="PrimaryText"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Commit Message" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E9U-WU-lVB" userLabel="Message Label">
-                                                    <rect key="frame" x="0.0" y="20.5" width="359" height="20.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" name="PrimaryText"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2iP-N8-Lbs" userLabel="Spacer">
-                                                    <rect key="frame" x="0.0" y="41" width="359" height="6"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="6" id="38f-i4-Dzc"/>
-                                                    </constraints>
-                                                </view>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hash Value" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L4I-AB-03W" userLabel="Hash Label">
-                                                    <rect key="frame" x="0.0" y="47" width="359" height="15"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                                    <color key="textColor" name="SecondaryText"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="SjM-3R-8JA">
+                                                    <rect key="frame" x="16" y="16" width="327" height="54.5"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="253" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JZs-Nb-Mqo" userLabel="Author Label">
+                                                            <rect key="frame" x="0.0" y="0.0" width="327" height="17"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <color key="textColor" name="PrimaryText"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Commit Message" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E9U-WU-lVB" userLabel="Message Label">
+                                                            <rect key="frame" x="0.0" y="17" width="327" height="17"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <color key="textColor" name="PrimaryText"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2iP-N8-Lbs" userLabel="Spacer">
+                                                            <rect key="frame" x="0.0" y="34" width="327" height="6"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="6" id="38f-i4-Dzc"/>
+                                                            </constraints>
+                                                        </view>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hash Value" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L4I-AB-03W" userLabel="Hash Label">
+                                                            <rect key="frame" x="0.0" y="40" width="327" height="14.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                            <color key="textColor" name="SecondaryText"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
                                             </subviews>
-                                        </stackView>
+                                            <color key="backgroundColor" name="CellBackground"/>
+                                            <constraints>
+                                                <constraint firstItem="SjM-3R-8JA" firstAttribute="leading" secondItem="B3O-gA-iRa" secondAttribute="leading" constant="16" id="AXt-WT-V4A"/>
+                                                <constraint firstAttribute="trailing" secondItem="SjM-3R-8JA" secondAttribute="trailing" constant="16" id="HER-9H-NDl"/>
+                                                <constraint firstAttribute="bottom" secondItem="SjM-3R-8JA" secondAttribute="bottom" constant="16" id="pfd-5O-PQS"/>
+                                                <constraint firstItem="SjM-3R-8JA" firstAttribute="top" secondItem="B3O-gA-iRa" secondAttribute="top" constant="16" id="yUC-h9-hh9"/>
+                                            </constraints>
+                                        </view>
                                     </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
-                                        <constraint firstItem="SjM-3R-8JA" firstAttribute="top" secondItem="soR-xw-9kT" secondAttribute="top" constant="8" id="GZk-iy-skD"/>
-                                        <constraint firstAttribute="trailing" secondItem="SjM-3R-8JA" secondAttribute="trailing" constant="8" id="YrT-vw-KRE"/>
-                                        <constraint firstAttribute="bottom" secondItem="SjM-3R-8JA" secondAttribute="bottom" constant="8" id="vJY-z4-68m"/>
-                                        <constraint firstItem="SjM-3R-8JA" firstAttribute="leading" secondItem="soR-xw-9kT" secondAttribute="leading" constant="8" id="vnH-Kw-kwT"/>
+                                        <constraint firstItem="B3O-gA-iRa" firstAttribute="top" secondItem="soR-xw-9kT" secondAttribute="top" constant="8" id="9h3-gw-wVZ"/>
+                                        <constraint firstItem="B3O-gA-iRa" firstAttribute="leading" secondItem="soR-xw-9kT" secondAttribute="leading" constant="8" id="CJa-pM-XKb"/>
+                                        <constraint firstAttribute="bottom" secondItem="B3O-gA-iRa" secondAttribute="bottom" constant="8" id="YqL-cF-0GZ"/>
+                                        <constraint firstAttribute="trailing" secondItem="B3O-gA-iRa" secondAttribute="trailing" constant="8" id="rLT-m2-NjF"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <outlet property="authorLabel" destination="JZs-Nb-Mqo" id="LWi-mi-QPy"/>
+                                    <outlet property="cardView" destination="B3O-gA-iRa" id="6JS-SH-Cw0"/>
+                                    <outlet property="cardViewBottom" destination="YqL-cF-0GZ" id="01q-Yj-m8E"/>
                                     <outlet property="hashLabel" destination="L4I-AB-03W" id="API-2x-Tkm"/>
                                     <outlet property="messageLabel" destination="E9U-WU-lVB" id="dHD-W8-UzD"/>
                                 </connections>
@@ -141,14 +156,17 @@
         </scene>
     </scenes>
     <resources>
+        <namedColor name="CellBackground">
+            <color red="0.98028594260000002" green="0.9804533124" blue="0.98027533290000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="PrimaryText">
             <color red="0.063000001013278961" green="0.063000001013278961" blue="0.063000001013278961" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="SecondaryText">
-            <color red="0.76899999380111694" green="0.76899999380111694" blue="0.77600002288818359" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.69019607843137254" green="0.69019607843137254" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <namedColor name="TableBackground">
+            <color red="0.96100002527236938" green="0.96100002527236938" blue="0.96100002527236938" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
